--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-splashscreen",
+  "name": "@trodi/electron-splashscreen",
   "version": "0.1.0",
   "description": "Simple splashscreen for electron applications",
   "main": "index.js",
