--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
+    "generate-api-doc": "typedoc --readme none --mode file --theme markdown --mdHideSources --excludePrivate --out api-doc/ index.ts",
     "prebuild": "tslint --config tslint.json *.ts",
     "build": "tsc",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build && npm run generate-api-doc",
     "preexample": "npm run build",
     "example": "electron examples/example.js",
     "preexample-dynamic": "npm run build",
@@ -15,7 +16,8 @@
   },
   "files": [
     "index.js",
-    "index.d.ts"
+    "index.d.ts",
+    "api-doc"
   ],
   "repository": {
     "type": "git",
@@ -24,7 +26,8 @@
   "keywords": [
     "electron",
     "splashscreen",
-    "splash-screen"
+    "splash-screen",
+    "loading-screen"
   ],
   "author": "Troy McKinnon",
   "license": "MIT",
@@ -35,6 +38,8 @@
   "devDependencies": {
     "electron": "^1.7.9",
     "tslint": "^5.7.0",
+    "typedoc": "^0.9.0",
+    "typedoc-plugin-markdown": "^1.0.12",
     "typescript": "^2.5.3"
   }
 }
