--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trodi/electron-splashscreen.git"
+    "url": "https://github.com/trodi/electron-splashscreen.git"
   },
   "keywords": [
     "electron",
